{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 340,
  "lineage": "cf8a488a-6393-86ed-f690-2957f146365f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:route-table/rtb-0c91dfa24c2c6d77e",
            "id": "rtb-0c91dfa24c2c6d77e",
            "owner_id": "610175138509",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "budgetbot-hackathon-rt-private"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-rt-private",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0162b6d94aebf9db9",
            "route_table_id": "rtb-0c91dfa24c2c6d77e",
            "subnet_id": "subnet-01c584fc5eab97381"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123c1eafbb05d41f",
            "route_table_id": "rtb-0c91dfa24c2c6d77e",
            "subnet_id": "subnet-02de200dac70d62cf"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:security-group/sg-07f9ab0c84748e045",
            "description": "Security group for Bedrock Runtime Interface Endpoint",
            "egress": [],
            "id": "sg-07f9ab0c84748e045",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024514607ef0c62bf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "budgetbot-hackathon-bedrock-sg",
            "name_prefix": "",
            "owner_id": "610175138509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "budgetbot-hackathon-bedrock-sg"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-bedrock-sg",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:security-group/sg-024514607ef0c62bf",
            "description": "Security group for backend Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024514607ef0c62bf",
            "ingress": [],
            "name": "budgetbot-hackathon-lambda-sg",
            "name_prefix": "",
            "owner_id": "610175138509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "budgetbot-hackathon-lambda-sg"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-lambda-sg",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "textract",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:security-group/sg-00277552efabadc49",
            "description": "Security group for Textract Interface Endpoint",
            "egress": [],
            "id": "sg-00277552efabadc49",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024514607ef0c62bf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "budgetbot-hackathon-textract-sg",
            "name_prefix": "",
            "owner_id": "610175138509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "budgetbot-hackathon-textract-sg"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-textract-sg",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:subnet/subnet-01c584fc5eab97381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c584fc5eab97381",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610175138509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "budgetbot-hackathon-subnet-private-a"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-subnet-private-a",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:subnet/subnet-02de200dac70d62cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02de200dac70d62cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610175138509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "budgetbot-hackathon-subnet-private-b"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-subnet-private-b",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:vpc/vpc-08b07ea58d6be0d84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034b5e471d7650378",
            "default_route_table_id": "rtb-00b8782911de0c477",
            "default_security_group_id": "sg-07742059859d050de",
            "dhcp_options_id": "dopt-006c64c0420748880",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b07ea58d6be0d84",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b8782911de0c477",
            "owner_id": "610175138509",
            "tags": {
              "Name": "budgetbot-hackathon-vpc"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-vpc",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bedrock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:vpc-endpoint/vpce-0490e268bd5bf714a",
            "dns_entry": [
              {
                "dns_name": "vpce-0490e268bd5bf714a-mjn89ly3.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0490e268bd5bf714a-mjn89ly3-us-east-1a.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0490e268bd5bf714a-mjn89ly3-us-east-1b.bedrock-runtime.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "bedrock-runtime.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06171387533DY36K7DA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0490e268bd5bf714a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-015a05ef12d18de60",
              "eni-0a7ca9d1c9121c665"
            ],
            "owner_id": "610175138509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-07f9ab0c84748e045"
            ],
            "service_name": "com.amazonaws.us-east-1.bedrock-runtime",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.210",
                "subnet_id": "subnet-01c584fc5eab97381"
              },
              {
                "ipv4": "10.0.2.40",
                "subnet_id": "subnet-02de200dac70d62cf"
              }
            ],
            "subnet_ids": [
              "subnet-01c584fc5eab97381",
              "subnet-02de200dac70d62cf"
            ],
            "tags": {
              "Name": "budgetbot-hackathon-vpce-bedrock"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-vpce-bedrock",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_security_group.bedrock",
            "aws_security_group.lambda",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:vpc-endpoint/vpce-0a7982ac47a75c271",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a7982ac47a75c271",
            "ip_address_type": "ipv4",
            "owner_id": "610175138509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c91dfa24c2c6d77e"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "budgetbot-hackathon-vpce-dynamodb"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-vpce-dynamodb",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:vpc-endpoint/vpce-06e15364042ec6183",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06e15364042ec6183",
            "ip_address_type": "ipv4",
            "owner_id": "610175138509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c91dfa24c2c6d77e"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "budgetbot-hackathon-vpce-s3"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-vpce-s3",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "textract",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:610175138509:vpc-endpoint/vpce-0228731f0ca8d8f4e",
            "dns_entry": [
              {
                "dns_name": "vpce-0228731f0ca8d8f4e-6e0cf6au.textract.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0228731f0ca8d8f4e-6e0cf6au-us-east-1a.textract.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0228731f0ca8d8f4e-6e0cf6au-us-east-1b.textract.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "textract.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z032937711U7NP87MK6TL"
              },
              {
                "dns_name": "textract.us-east-1.api.aws",
                "hosted_zone_id": "Z0656864HFJSY99VR8QS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0228731f0ca8d8f4e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-029434426ff3f476d",
              "eni-0db207d18e5a087f9"
            ],
            "owner_id": "610175138509",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-00277552efabadc49"
            ],
            "service_name": "com.amazonaws.us-east-1.textract",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.9",
                "subnet_id": "subnet-01c584fc5eab97381"
              },
              {
                "ipv4": "10.0.2.51",
                "subnet_id": "subnet-02de200dac70d62cf"
              }
            ],
            "subnet_ids": [
              "subnet-01c584fc5eab97381",
              "subnet-02de200dac70d62cf"
            ],
            "tags": {
              "Name": "budgetbot-hackathon-vpce-textract"
            },
            "tags_all": {
              "CostCenter": "G13",
              "Environment": "hackathon",
              "ManagedBy": "Terraform",
              "Name": "budgetbot-hackathon-vpce-textract",
              "Owner": "ptientr.dev@gmail.com",
              "Project": "W7Capstone",
              "Team": "G13"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b07ea58d6be0d84"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.textract",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}